インデクスメッシュ＝ 8 x 8